# papercal

./: .gitignore  README.md  TODO.md  calendar_image.py  cmtr.toml  example.env  example_generation.py  image_to_esp.py  index.html  main.py  parse_ical.py  pyproject.toml  weather.py
data/: example.ics
